--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -130,33 +130,45 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2018-10-14T18:39:52.000Z",
-        "mtime": "2018-10-14T18:39:52.000Z",
-        "size": 252
-      },
-      {
-        "file": "img/dt-bg.png",
-        "ctime": "2018-10-14T18:25:37.000Z",
-        "mtime": "2018-10-14T18:25:37.000Z",
-        "size": 212979
-      },
-      {
-        "file": "img/mb-bg.png",
-        "ctime": "2018-10-14T18:25:09.000Z",
-        "mtime": "2018-10-14T18:25:09.000Z",
-        "size": 83652
+        "ctime": "2018-10-18T00:18:26.000Z",
+        "mtime": "2018-10-18T00:18:26.000Z",
+        "size": 0
       },
       {
         "file": "index.html",
-        "ctime": "2018-10-14T18:47:53.000Z",
-        "mtime": "2018-10-14T18:47:53.000Z",
-        "size": 620
+        "ctime": "2018-10-18T01:26:48.000Z",
+        "mtime": "2018-10-18T01:26:48.000Z",
+        "size": 3263
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2018-10-14T18:56:18.000Z",
-        "mtime": "2018-10-14T18:56:18.000Z",
-        "size": 157
+        "ctime": "2018-10-18T01:38:59.000Z",
+        "mtime": "2018-10-18T01:38:59.000Z",
+        "size": 494
+      },
+      {
+        "file": "img/foto-bienvenida.jpg",
+        "ctime": "2018-10-18T01:15:27.000Z",
+        "mtime": "2018-10-18T01:15:26.000Z",
+        "size": 46640
+      },
+      {
+        "file": "img/home-hero.png",
+        "ctime": "2018-10-17T23:11:52.000Z",
+        "mtime": "2018-10-17T23:11:52.000Z",
+        "size": 87608
+      },
+      {
+        "file": "img/kallpa-old-logo.png",
+        "ctime": "2018-10-18T00:17:47.000Z",
+        "mtime": "2018-10-18T00:17:47.000Z",
+        "size": 203996
+      },
+      {
+        "file": "img/kcs-logo.png",
+        "ctime": "2018-10-18T00:15:53.000Z",
+        "mtime": "2018-10-18T00:15:53.000Z",
+        "size": 76004
       }
     ]
   },
