fuera package-lock

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -130,15 +130,15 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2018-10-18T00:18:26.000Z",
-        "mtime": "2018-10-18T00:18:26.000Z",
-        "size": 0
+        "ctime": "2018-10-18T15:31:30.000Z",
+        "mtime": "2018-10-18T15:31:30.000Z",
+        "size": 3791
       },
       {
         "file": "index.html",
-        "ctime": "2018-10-18T01:26:48.000Z",
-        "mtime": "2018-10-18T01:26:48.000Z",
-        "size": 3263
+        "ctime": "2018-10-18T02:12:32.000Z",
+        "mtime": "2018-10-18T02:12:32.000Z",
+        "size": 3262
       },
       {
         "file": "js/scripts.js",
@@ -169,6 +169,42 @@
         "ctime": "2018-10-18T00:15:53.000Z",
         "mtime": "2018-10-18T00:15:53.000Z",
         "size": 76004
+      },
+      {
+        "file": "css/fonts.css",
+        "ctime": "2018-10-18T02:45:30.000Z",
+        "mtime": "2018-10-18T02:45:30.000Z",
+        "size": 439
+      },
+      {
+        "file": "css/normalize.css",
+        "ctime": "2018-10-18T02:09:34.000Z",
+        "mtime": "2018-08-15T19:07:39.000Z",
+        "size": 7718
+      },
+      {
+        "file": "fonts/QuattrocentoSans-Bold.ttf",
+        "ctime": "2018-10-18T02:08:34.000Z",
+        "mtime": "2012-02-15T05:00:00.000Z",
+        "size": 100560
+      },
+      {
+        "file": "fonts/QuattrocentoSans-BoldItalic.ttf",
+        "ctime": "2018-10-18T02:08:34.000Z",
+        "mtime": "2012-02-15T05:00:00.000Z",
+        "size": 100748
+      },
+      {
+        "file": "fonts/QuattrocentoSans-Italic.ttf",
+        "ctime": "2018-10-18T02:08:34.000Z",
+        "mtime": "2012-02-15T05:00:00.000Z",
+        "size": 108700
+      },
+      {
+        "file": "fonts/QuattrocentoSans-Regular.ttf",
+        "ctime": "2018-10-18T02:08:34.000Z",
+        "mtime": "2012-02-15T05:00:00.000Z",
+        "size": 98340
       }
     ]
   },
