Animación logo casi lista

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -130,21 +130,21 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2018-10-18T15:31:30.000Z",
-        "mtime": "2018-10-18T15:31:30.000Z",
-        "size": 3791
+        "ctime": "2018-10-19T05:04:57.000Z",
+        "mtime": "2018-10-19T05:04:57.000Z",
+        "size": 9665
       },
       {
         "file": "index.html",
-        "ctime": "2018-10-18T02:12:32.000Z",
-        "mtime": "2018-10-18T02:12:32.000Z",
-        "size": 3262
+        "ctime": "2018-10-19T01:19:51.000Z",
+        "mtime": "2018-10-19T01:19:51.000Z",
+        "size": 3772
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2018-10-18T01:38:59.000Z",
-        "mtime": "2018-10-18T01:38:59.000Z",
-        "size": 494
+        "ctime": "2018-10-18T22:08:05.000Z",
+        "mtime": "2018-10-18T22:08:05.000Z",
+        "size": 994
       },
       {
         "file": "img/foto-bienvenida.jpg",
@@ -205,6 +205,42 @@
         "ctime": "2018-10-18T02:08:34.000Z",
         "mtime": "2012-02-15T05:00:00.000Z",
         "size": 98340
+      },
+      {
+        "file": "img/selected.png",
+        "ctime": "2018-10-18T22:47:11.000Z",
+        "mtime": "2018-10-18T22:47:11.000Z",
+        "size": 181
+      },
+      {
+        "file": "img/beneficios.png",
+        "ctime": "2018-10-19T00:37:27.000Z",
+        "mtime": "2018-10-19T00:37:26.000Z",
+        "size": 48774
+      },
+      {
+        "file": "img/laboral.png",
+        "ctime": "2018-10-19T00:22:46.000Z",
+        "mtime": "2018-10-19T00:22:45.000Z",
+        "size": 19930
+      },
+      {
+        "file": "img/patrimonio.png",
+        "ctime": "2018-10-19T00:35:18.000Z",
+        "mtime": "2018-10-19T00:35:18.000Z",
+        "size": 38072
+      },
+      {
+        "file": "img/salud.png",
+        "ctime": "2018-10-19T00:27:38.000Z",
+        "mtime": "2018-10-19T00:27:38.000Z",
+        "size": 25146
+      },
+      {
+        "file": "img/vida.png",
+        "ctime": "2018-10-19T00:30:43.000Z",
+        "mtime": "2018-10-19T00:30:43.000Z",
+        "size": 36275
       }
     ]
   },
