--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -130,27 +130,15 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2018-10-19T05:04:57.000Z",
-        "mtime": "2018-10-19T05:04:57.000Z",
-        "size": 9665
-      },
-      {
-        "file": "index.html",
-        "ctime": "2018-10-19T01:19:51.000Z",
-        "mtime": "2018-10-19T01:19:51.000Z",
-        "size": 3772
+        "ctime": "2018-10-24T15:25:05.000Z",
+        "mtime": "2018-10-24T15:25:05.000Z",
+        "size": 23708
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2018-10-18T22:08:05.000Z",
-        "mtime": "2018-10-18T22:08:05.000Z",
-        "size": 994
-      },
-      {
-        "file": "img/foto-bienvenida.jpg",
-        "ctime": "2018-10-18T01:15:27.000Z",
-        "mtime": "2018-10-18T01:15:26.000Z",
-        "size": 46640
+        "ctime": "2018-10-24T14:24:55.000Z",
+        "mtime": "2018-10-24T14:24:55.000Z",
+        "size": 1370
       },
       {
         "file": "img/home-hero.png",
@@ -220,9 +208,9 @@
       },
       {
         "file": "img/laboral.png",
-        "ctime": "2018-10-19T00:22:46.000Z",
-        "mtime": "2018-10-19T00:22:45.000Z",
-        "size": 19930
+        "ctime": "2018-10-23T01:05:17.000Z",
+        "mtime": "2018-10-23T01:05:17.000Z",
+        "size": 23873
       },
       {
         "file": "img/patrimonio.png",
@@ -241,6 +229,282 @@
         "ctime": "2018-10-19T00:30:43.000Z",
         "mtime": "2018-10-19T00:30:43.000Z",
         "size": 36275
+      },
+      {
+        "file": "img/video-bienvenida.jpg",
+        "ctime": "2018-10-19T16:59:11.000Z",
+        "mtime": "2018-10-19T16:59:11.000Z",
+        "size": 39032
+      },
+      {
+        "file": "img/video-info.jpg",
+        "ctime": "2018-10-19T17:47:37.000Z",
+        "mtime": "2018-10-19T17:47:36.000Z",
+        "size": 34018
+      },
+      {
+        "file": "img/chubb.jpg",
+        "ctime": "2018-10-19T18:11:53.000Z",
+        "mtime": "2018-10-19T18:11:53.000Z",
+        "size": 4962
+      },
+      {
+        "file": "img/la_positiva.jpg",
+        "ctime": "2018-10-19T18:02:13.000Z",
+        "mtime": "2018-10-19T18:02:13.000Z",
+        "size": 10126
+      },
+      {
+        "file": "img/mapfre.jpg",
+        "ctime": "2018-10-19T18:11:03.000Z",
+        "mtime": "2018-10-19T18:11:03.000Z",
+        "size": 12421
+      },
+      {
+        "file": "img/pacifico.jpg",
+        "ctime": "2018-10-19T18:02:38.000Z",
+        "mtime": "2018-10-19T18:02:38.000Z",
+        "size": 9512
+      },
+      {
+        "file": "img/rimac.jpg",
+        "ctime": "2018-10-19T18:11:30.000Z",
+        "mtime": "2018-10-19T18:11:30.000Z",
+        "size": 9315
+      },
+      {
+        "file": "favicon.ico",
+        "ctime": "2018-10-19T21:16:37.000Z",
+        "mtime": "2018-10-19T21:16:37.000Z",
+        "size": 2308
+      },
+      {
+        "file": "index.php",
+        "ctime": "2018-10-24T14:56:04.000Z",
+        "mtime": "2018-10-24T14:56:04.000Z",
+        "size": 1370
+      },
+      {
+        "file": "img/contacto.png",
+        "ctime": "2018-10-22T23:47:05.000Z",
+        "mtime": "2018-10-22T23:47:04.000Z",
+        "size": 20531
+      },
+      {
+        "file": "inc/beneficios.view.php",
+        "ctime": "2018-10-24T06:16:27.000Z",
+        "mtime": "2018-10-24T06:16:27.000Z",
+        "size": 4391
+      },
+      {
+        "file": "inc/contacto.view.php",
+        "ctime": "2018-10-24T15:25:36.000Z",
+        "mtime": "2018-10-24T15:25:36.000Z",
+        "size": 2906
+      },
+      {
+        "file": "inc/index.view.php",
+        "ctime": "2018-10-24T14:26:37.000Z",
+        "mtime": "2018-10-24T14:26:37.000Z",
+        "size": 4673
+      },
+      {
+        "file": "inc/inicio.view.php",
+        "ctime": "2018-10-22T23:59:39.000Z",
+        "mtime": "2018-10-22T23:59:39.000Z",
+        "size": 4147
+      },
+      {
+        "file": "inc/nosotros.view.php",
+        "ctime": "2018-10-24T15:12:32.000Z",
+        "mtime": "2018-10-24T15:12:32.000Z",
+        "size": 3600
+      },
+      {
+        "file": "inc/patrimonio.view.php",
+        "ctime": "2018-10-24T15:17:27.000Z",
+        "mtime": "2018-10-24T15:17:27.000Z",
+        "size": 4268
+      },
+      {
+        "file": "inc/salud.view.php",
+        "ctime": "2018-10-24T03:30:31.000Z",
+        "mtime": "2018-10-24T03:30:31.000Z",
+        "size": 3632
+      },
+      {
+        "file": "inc/vida.view.php",
+        "ctime": "2018-10-24T03:31:00.000Z",
+        "mtime": "2018-10-24T03:31:00.000Z",
+        "size": 2732
+      },
+      {
+        "file": "php/config.php",
+        "ctime": "2018-10-24T15:25:57.000Z",
+        "mtime": "2018-10-24T15:25:57.000Z",
+        "size": 218
+      },
+      {
+        "file": ".htaccess",
+        "ctime": "2018-10-22T04:00:50.000Z",
+        "mtime": "2018-10-22T04:00:50.000Z",
+        "size": 251
+      },
+      {
+        "file": "img/nosotros.png",
+        "ctime": "2018-10-22T16:53:22.000Z",
+        "mtime": "2018-10-22T16:53:21.000Z",
+        "size": 59247
+      },
+      {
+        "file": "img/nosotros-art1.jpg",
+        "ctime": "2018-10-22T22:45:19.000Z",
+        "mtime": "2018-10-22T22:45:19.000Z",
+        "size": 160683
+      },
+      {
+        "file": "img/galeria/1.jpg",
+        "ctime": "2018-10-23T04:28:54.000Z",
+        "mtime": "2018-10-23T04:28:54.000Z",
+        "size": 26828
+      },
+      {
+        "file": "img/galeria/2.jpg",
+        "ctime": "2018-10-23T04:29:03.000Z",
+        "mtime": "2018-10-23T04:29:03.000Z",
+        "size": 28466
+      },
+      {
+        "file": "img/galeria/3.jpg",
+        "ctime": "2018-10-23T04:29:10.000Z",
+        "mtime": "2018-10-23T04:29:10.000Z",
+        "size": 24241
+      },
+      {
+        "file": "img/galeria/4.jpg",
+        "ctime": "2018-10-23T04:29:17.000Z",
+        "mtime": "2018-10-23T04:29:17.000Z",
+        "size": 32227
+      },
+      {
+        "file": "img/galeria/5.jpg",
+        "ctime": "2018-10-23T04:29:23.000Z",
+        "mtime": "2018-10-23T04:29:23.000Z",
+        "size": 38611
+      },
+      {
+        "file": "img/galeria/6.jpg",
+        "ctime": "2018-10-23T04:29:27.000Z",
+        "mtime": "2018-10-23T04:29:27.000Z",
+        "size": 23331
+      },
+      {
+        "file": "img/sctr.png",
+        "ctime": "2018-10-23T20:16:06.000Z",
+        "mtime": "2018-10-23T20:16:05.000Z",
+        "size": 10894
+      },
+      {
+        "file": "img/seguro-accidentes.png",
+        "ctime": "2018-10-23T19:42:32.000Z",
+        "mtime": "2018-10-23T19:42:32.000Z",
+        "size": 13837
+      },
+      {
+        "file": "img/seguro-oncologico.png",
+        "ctime": "2018-10-23T20:12:36.000Z",
+        "mtime": "2018-10-23T20:12:36.000Z",
+        "size": 5752
+      },
+      {
+        "file": "img/seguro-salud.png",
+        "ctime": "2018-10-23T19:23:33.000Z",
+        "mtime": "2018-10-23T19:23:33.000Z",
+        "size": 11646
+      },
+      {
+        "file": "img/futuro-20.png",
+        "ctime": "2018-10-23T20:32:09.000Z",
+        "mtime": "2018-10-23T20:32:09.000Z",
+        "size": 15817
+      },
+      {
+        "file": "img/seguro-academico.png",
+        "ctime": "2018-10-23T20:33:57.000Z",
+        "mtime": "2018-10-23T20:33:57.000Z",
+        "size": 34167
+      },
+      {
+        "file": "img/responsabilidad-civil.png",
+        "ctime": "2018-10-23T21:13:03.000Z",
+        "mtime": "2018-10-23T21:13:03.000Z",
+        "size": 16595
+      },
+      {
+        "file": "img/seguro-robo.png",
+        "ctime": "2018-10-23T21:15:26.000Z",
+        "mtime": "2018-10-23T21:15:26.000Z",
+        "size": 8771
+      },
+      {
+        "file": "img/seguro-transporte.png",
+        "ctime": "2018-10-23T21:14:22.000Z",
+        "mtime": "2018-10-23T21:14:21.000Z",
+        "size": 10950
+      },
+      {
+        "file": "img/seguro-vehicular.png",
+        "ctime": "2018-10-23T21:11:51.000Z",
+        "mtime": "2018-10-23T21:11:50.000Z",
+        "size": 74393
+      },
+      {
+        "file": "img/aseguradoras.jpg",
+        "ctime": "2018-10-24T05:13:34.000Z",
+        "mtime": "2018-10-24T05:13:34.000Z",
+        "size": 31932
+      },
+      {
+        "file": "img/asesores.jpg",
+        "ctime": "2018-10-24T05:08:45.000Z",
+        "mtime": "2018-10-24T05:08:45.000Z",
+        "size": 39848
+      },
+      {
+        "file": "img/beneficios.jpg",
+        "ctime": "2018-10-24T05:47:22.000Z",
+        "mtime": "2018-10-24T05:47:22.000Z",
+        "size": 34223
+      },
+      {
+        "file": "img/capital.jpg",
+        "ctime": "2018-10-24T05:42:09.000Z",
+        "mtime": "2018-10-24T05:42:09.000Z",
+        "size": 32249
+      },
+      {
+        "file": "img/ceviche.jpg",
+        "ctime": "2018-10-24T05:48:52.000Z",
+        "mtime": "2018-10-24T05:48:52.000Z",
+        "size": 45213
+      },
+      {
+        "file": "img/personal.jpg",
+        "ctime": "2018-10-24T05:45:16.000Z",
+        "mtime": "2018-10-24T05:45:16.000Z",
+        "size": 32132
+      },
+      {
+        "file": "img/premio.jpg",
+        "ctime": "2018-10-24T05:50:10.000Z",
+        "mtime": "2018-10-24T05:50:10.000Z",
+        "size": 48810
+      },
+      {
+        "file": "img/vehicular.jpg",
+        "ctime": "2018-10-24T05:46:28.000Z",
+        "mtime": "2018-10-24T05:46:28.000Z",
+        "size": 40974
       }
     ]
   },
