--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -81,7 +81,7 @@
   },
   "ftp-deploy": {
     "connectionType": "ftp",
-    "remotePath": "/public_html/nueva/",
+    "remotePath": "/public_html/",
     "uploadTimeout": 20000,
     "uploadOnChange": false,
     "ftp": {
@@ -125,14 +125,16 @@
       "*.coffee",
       "*.ls",
       "*.kit",
-      "*.ts"
+      "*.ts",
+      "CUMPLE.gif",
+      "bienvenida.mp4"
     ],
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2018-10-24T15:25:05.000Z",
-        "mtime": "2018-10-24T15:25:05.000Z",
-        "size": 23708
+        "ctime": "2018-11-05T17:55:42.000Z",
+        "mtime": "2018-11-05T17:55:42.000Z",
+        "size": 24106
       },
       {
         "file": "js/scripts.js",
@@ -232,9 +234,9 @@
       },
       {
         "file": "img/video-bienvenida.jpg",
-        "ctime": "2018-10-19T16:59:11.000Z",
-        "mtime": "2018-10-19T16:59:11.000Z",
-        "size": 39032
+        "ctime": "2018-11-05T17:53:09.000Z",
+        "mtime": "2018-11-05T17:53:08.000Z",
+        "size": 20984
       },
       {
         "file": "img/video-info.jpg",
@@ -280,8 +282,8 @@
       },
       {
         "file": "index.php",
-        "ctime": "2018-10-24T14:56:04.000Z",
-        "mtime": "2018-10-24T14:56:04.000Z",
+        "ctime": "2018-11-05T18:03:04.000Z",
+        "mtime": "2018-11-05T18:03:04.000Z",
         "size": 1370
       },
       {
@@ -292,27 +294,27 @@
       },
       {
         "file": "inc/beneficios.view.php",
-        "ctime": "2018-10-24T06:16:27.000Z",
-        "mtime": "2018-10-24T06:16:27.000Z",
-        "size": 4391
+        "ctime": "2018-10-29T06:23:17.000Z",
+        "mtime": "2018-10-29T06:23:17.000Z",
+        "size": 4399
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2018-10-24T15:25:36.000Z",
-        "mtime": "2018-10-24T15:25:36.000Z",
+        "ctime": "2018-10-25T01:00:46.000Z",
+        "mtime": "2018-10-25T01:00:46.000Z",
         "size": 2906
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2018-10-24T14:26:37.000Z",
-        "mtime": "2018-10-24T14:26:37.000Z",
-        "size": 4673
+        "ctime": "2018-11-05T17:04:41.000Z",
+        "mtime": "2018-11-05T17:04:41.000Z",
+        "size": 4874
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2018-10-22T23:59:39.000Z",
-        "mtime": "2018-10-22T23:59:39.000Z",
-        "size": 4147
+        "ctime": "2018-11-05T18:02:37.000Z",
+        "mtime": "2018-11-05T18:02:37.000Z",
+        "size": 4935
       },
       {
         "file": "inc/nosotros.view.php",
@@ -322,15 +324,15 @@
       },
       {
         "file": "inc/patrimonio.view.php",
-        "ctime": "2018-10-24T15:17:27.000Z",
-        "mtime": "2018-10-24T15:17:27.000Z",
-        "size": 4268
+        "ctime": "2018-10-29T06:09:59.000Z",
+        "mtime": "2018-10-29T06:09:59.000Z",
+        "size": 4279
       },
       {
         "file": "inc/salud.view.php",
-        "ctime": "2018-10-24T03:30:31.000Z",
-        "mtime": "2018-10-24T03:30:31.000Z",
-        "size": 3632
+        "ctime": "2018-10-29T06:09:30.000Z",
+        "mtime": "2018-10-29T06:09:30.000Z",
+        "size": 3640
       },
       {
         "file": "inc/vida.view.php",
@@ -340,9 +342,9 @@
       },
       {
         "file": "php/config.php",
-        "ctime": "2018-10-24T15:25:57.000Z",
-        "mtime": "2018-10-24T15:25:57.000Z",
-        "size": 218
+        "ctime": "2018-11-05T18:02:47.000Z",
+        "mtime": "2018-11-05T18:02:47.000Z",
+        "size": 212
       },
       {
         "file": ".htaccess",
@@ -505,6 +507,24 @@
         "ctime": "2018-10-24T05:46:28.000Z",
         "mtime": "2018-10-24T05:46:28.000Z",
         "size": 40974
+      },
+      {
+        "file": "img/hbposter.png",
+        "ctime": "2018-11-05T16:07:22.000Z",
+        "mtime": "2018-11-05T16:07:22.000Z",
+        "size": 122218
+      },
+      {
+        "file": "vid/happybd.mp4",
+        "ctime": "2018-10-29T07:03:49.000Z",
+        "mtime": "2018-10-29T07:03:49.000Z",
+        "size": 399152
+      },
+      {
+        "file": "happybirthday.html",
+        "ctime": "2018-11-05T16:38:23.000Z",
+        "mtime": "2018-08-09T22:37:03.000Z",
+        "size": 1113
       }
     ]
   },
