Commit de respaldo

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -17,7 +17,16 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "old/SCSS/estilos.scss",
+      "imports": [
+        "old/SCSS/_variables.scss",
+        "old/SCSS/_mixins.scss",
+        "old/SCSS/_responsive.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "ftp"
   },
@@ -87,10 +96,10 @@
     "ftp": {
       "secure": false,
       "keepAlive": true,
-      "host": "kallpacorredoresdeseguros.pe",
+      "host": "kcs.pe",
       "port": 21,
-      "user": "kallpac2",
-      "password": "8hI3e2oPk7"
+      "user": "kcspe",
+      "password": "7g7Q2ks3jT"
     },
     "sftp": {
       "host": "",
@@ -282,8 +291,8 @@
       },
       {
         "file": "index.php",
-        "ctime": "2018-11-05T18:03:04.000Z",
-        "mtime": "2018-11-05T18:03:04.000Z",
+        "ctime": "2018-11-06T01:13:26.000Z",
+        "mtime": "2018-11-06T01:13:26.000Z",
         "size": 1370
       },
       {
@@ -306,20 +315,20 @@
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2018-11-05T17:04:41.000Z",
-        "mtime": "2018-11-05T17:04:41.000Z",
-        "size": 4874
+        "ctime": "2018-11-06T01:21:50.000Z",
+        "mtime": "2018-11-06T01:21:50.000Z",
+        "size": 4854
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2018-11-05T18:02:37.000Z",
-        "mtime": "2018-11-05T18:02:37.000Z",
-        "size": 4935
+        "ctime": "2018-11-06T01:11:53.000Z",
+        "mtime": "2018-11-06T01:11:53.000Z",
+        "size": 4961
       },
       {
         "file": "inc/nosotros.view.php",
-        "ctime": "2018-10-24T15:12:32.000Z",
-        "mtime": "2018-10-24T15:12:32.000Z",
+        "ctime": "2018-11-22T00:16:57.000Z",
+        "mtime": "2018-11-22T00:16:57.000Z",
         "size": 3600
       },
       {
@@ -342,8 +351,8 @@
       },
       {
         "file": "php/config.php",
-        "ctime": "2018-11-05T18:02:47.000Z",
-        "mtime": "2018-11-05T18:02:47.000Z",
+        "ctime": "2018-11-22T00:17:21.000Z",
+        "mtime": "2018-11-22T00:17:21.000Z",
         "size": 212
       },
       {
@@ -516,9 +525,9 @@
       },
       {
         "file": "vid/happybd.mp4",
-        "ctime": "2018-10-29T07:03:49.000Z",
-        "mtime": "2018-10-29T07:03:49.000Z",
-        "size": 399152
+        "ctime": "2018-11-06T01:02:10.000Z",
+        "mtime": "2018-11-05T19:49:35.000Z",
+        "size": 523211
       },
       {
         "file": "happybirthday.html",
