--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -136,224 +136,226 @@
       "*.kit",
       "*.ts",
       "CUMPLE.gif",
-      "bienvenida.mp4"
+      "bienvenida.mp4",
+      "vid/*.*",
+      "*.mp4"
     ],
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2018-11-05T17:55:42.000Z",
-        "mtime": "2018-11-05T17:55:42.000Z",
-        "size": 24106
+        "ctime": "2019-05-24T19:03:00.000Z",
+        "mtime": "2019-05-24T19:03:00.000Z",
+        "size": 27208
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2018-10-24T14:24:55.000Z",
-        "mtime": "2018-10-24T14:24:55.000Z",
-        "size": 1370
+        "ctime": "2019-05-24T18:47:27.000Z",
+        "mtime": "2019-05-24T18:47:27.000Z",
+        "size": 1696
       },
       {
         "file": "img/home-hero.png",
-        "ctime": "2018-10-17T23:11:52.000Z",
-        "mtime": "2018-10-17T23:11:52.000Z",
+        "ctime": "2019-05-08T23:34:14.000Z",
+        "mtime": "2019-01-03T22:10:11.000Z",
         "size": 87608
       },
       {
         "file": "img/kallpa-old-logo.png",
-        "ctime": "2018-10-18T00:17:47.000Z",
-        "mtime": "2018-10-18T00:17:47.000Z",
+        "ctime": "2019-05-08T23:34:15.000Z",
+        "mtime": "2019-01-03T22:10:16.000Z",
         "size": 203996
       },
       {
         "file": "img/kcs-logo.png",
-        "ctime": "2018-10-18T00:15:53.000Z",
-        "mtime": "2018-10-18T00:15:53.000Z",
+        "ctime": "2019-05-08T23:34:16.000Z",
+        "mtime": "2019-01-03T22:10:19.000Z",
         "size": 76004
       },
       {
         "file": "css/fonts.css",
-        "ctime": "2018-10-18T02:45:30.000Z",
-        "mtime": "2018-10-18T02:45:30.000Z",
+        "ctime": "2019-05-08T23:34:03.000Z",
+        "mtime": "2019-01-03T22:09:28.000Z",
         "size": 439
       },
       {
         "file": "css/normalize.css",
-        "ctime": "2018-10-18T02:09:34.000Z",
-        "mtime": "2018-08-15T19:07:39.000Z",
+        "ctime": "2019-05-08T23:34:03.000Z",
+        "mtime": "2019-01-03T22:09:30.000Z",
         "size": 7718
       },
       {
         "file": "fonts/QuattrocentoSans-Bold.ttf",
-        "ctime": "2018-10-18T02:08:34.000Z",
-        "mtime": "2012-02-15T05:00:00.000Z",
+        "ctime": "2019-05-08T23:34:06.000Z",
+        "mtime": "2019-01-03T22:09:36.000Z",
         "size": 100560
       },
       {
         "file": "fonts/QuattrocentoSans-BoldItalic.ttf",
-        "ctime": "2018-10-18T02:08:34.000Z",
-        "mtime": "2012-02-15T05:00:00.000Z",
+        "ctime": "2019-05-08T23:34:06.000Z",
+        "mtime": "2019-01-03T22:09:39.000Z",
         "size": 100748
       },
       {
         "file": "fonts/QuattrocentoSans-Italic.ttf",
-        "ctime": "2018-10-18T02:08:34.000Z",
-        "mtime": "2012-02-15T05:00:00.000Z",
+        "ctime": "2019-05-08T23:34:07.000Z",
+        "mtime": "2019-01-03T22:09:43.000Z",
         "size": 108700
       },
       {
         "file": "fonts/QuattrocentoSans-Regular.ttf",
-        "ctime": "2018-10-18T02:08:34.000Z",
-        "mtime": "2012-02-15T05:00:00.000Z",
+        "ctime": "2019-05-08T23:34:07.000Z",
+        "mtime": "2019-01-03T22:09:46.000Z",
         "size": 98340
       },
       {
         "file": "img/selected.png",
-        "ctime": "2018-10-18T22:47:11.000Z",
-        "mtime": "2018-10-18T22:47:11.000Z",
+        "ctime": "2019-05-08T23:34:25.000Z",
+        "mtime": "2019-01-03T22:10:56.000Z",
         "size": 181
       },
       {
         "file": "img/beneficios.png",
-        "ctime": "2018-10-19T00:37:27.000Z",
-        "mtime": "2018-10-19T00:37:26.000Z",
+        "ctime": "2019-05-08T23:34:12.000Z",
+        "mtime": "2019-01-03T22:09:56.000Z",
         "size": 48774
       },
       {
         "file": "img/laboral.png",
-        "ctime": "2018-10-23T01:05:17.000Z",
-        "mtime": "2018-10-23T01:05:17.000Z",
+        "ctime": "2019-05-08T23:34:16.000Z",
+        "mtime": "2019-01-03T22:10:20.000Z",
         "size": 23873
       },
       {
         "file": "img/patrimonio.png",
-        "ctime": "2018-10-19T00:35:18.000Z",
-        "mtime": "2018-10-19T00:35:18.000Z",
+        "ctime": "2019-05-08T23:34:19.000Z",
+        "mtime": "2019-01-03T22:10:33.000Z",
         "size": 38072
       },
       {
         "file": "img/salud.png",
-        "ctime": "2018-10-19T00:27:38.000Z",
-        "mtime": "2018-10-19T00:27:38.000Z",
+        "ctime": "2019-05-08T23:34:21.000Z",
+        "mtime": "2019-01-03T22:10:41.000Z",
         "size": 25146
       },
       {
         "file": "img/vida.png",
-        "ctime": "2018-10-19T00:30:43.000Z",
-        "mtime": "2018-10-19T00:30:43.000Z",
+        "ctime": "2019-05-08T23:34:27.000Z",
+        "mtime": "2019-01-03T22:11:00.000Z",
         "size": 36275
       },
       {
         "file": "img/video-bienvenida.jpg",
-        "ctime": "2018-11-05T17:53:09.000Z",
-        "mtime": "2018-11-05T17:53:08.000Z",
-        "size": 20984
+        "ctime": "2019-05-08T23:34:27.000Z",
+        "mtime": "2019-01-03T22:11:02.000Z",
+        "size": 42634
       },
       {
         "file": "img/video-info.jpg",
-        "ctime": "2018-10-19T17:47:37.000Z",
-        "mtime": "2018-10-19T17:47:36.000Z",
+        "ctime": "2019-05-08T23:34:27.000Z",
+        "mtime": "2019-01-03T22:11:04.000Z",
         "size": 34018
       },
       {
         "file": "img/chubb.jpg",
-        "ctime": "2018-10-19T18:11:53.000Z",
-        "mtime": "2018-10-19T18:11:53.000Z",
+        "ctime": "2019-05-08T23:34:13.000Z",
+        "mtime": "2019-01-03T22:10:02.000Z",
         "size": 4962
       },
       {
         "file": "img/la_positiva.jpg",
-        "ctime": "2018-10-19T18:02:13.000Z",
-        "mtime": "2018-10-19T18:02:13.000Z",
+        "ctime": "2019-05-08T23:34:16.000Z",
+        "mtime": "2019-01-03T22:10:22.000Z",
         "size": 10126
       },
       {
         "file": "img/mapfre.jpg",
-        "ctime": "2018-10-19T18:11:03.000Z",
-        "mtime": "2018-10-19T18:11:03.000Z",
+        "ctime": "2019-05-08T23:34:16.000Z",
+        "mtime": "2019-01-03T22:10:23.000Z",
         "size": 12421
       },
       {
         "file": "img/pacifico.jpg",
-        "ctime": "2018-10-19T18:02:38.000Z",
-        "mtime": "2018-10-19T18:02:38.000Z",
+        "ctime": "2019-05-08T23:34:18.000Z",
+        "mtime": "2019-01-03T22:10:31.000Z",
         "size": 9512
       },
       {
         "file": "img/rimac.jpg",
-        "ctime": "2018-10-19T18:11:30.000Z",
-        "mtime": "2018-10-19T18:11:30.000Z",
+        "ctime": "2019-05-08T23:34:21.000Z",
+        "mtime": "2019-01-03T22:10:40.000Z",
         "size": 9315
       },
       {
         "file": "favicon.ico",
-        "ctime": "2018-10-19T21:16:37.000Z",
-        "mtime": "2018-10-19T21:16:37.000Z",
+        "ctime": "2019-05-08T23:34:03.000Z",
+        "mtime": "2019-01-03T22:09:34.000Z",
         "size": 2308
       },
       {
         "file": "index.php",
-        "ctime": "2018-11-06T01:13:26.000Z",
-        "mtime": "2018-11-06T01:13:26.000Z",
-        "size": 1370
+        "ctime": "2019-05-24T16:18:10.000Z",
+        "mtime": "2019-05-24T16:18:10.000Z",
+        "size": 1389
       },
       {
         "file": "img/contacto.png",
-        "ctime": "2018-10-22T23:47:05.000Z",
-        "mtime": "2018-10-22T23:47:04.000Z",
+        "ctime": "2019-05-08T23:34:13.000Z",
+        "mtime": "2019-01-03T22:10:03.000Z",
         "size": 20531
       },
       {
         "file": "inc/beneficios.view.php",
-        "ctime": "2018-10-29T06:23:17.000Z",
-        "mtime": "2018-10-29T06:23:17.000Z",
+        "ctime": "2019-05-08T23:34:28.000Z",
+        "mtime": "2019-01-03T22:11:16.000Z",
         "size": 4399
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2018-10-25T01:00:46.000Z",
-        "mtime": "2018-10-25T01:00:46.000Z",
+        "ctime": "2019-05-08T23:34:28.000Z",
+        "mtime": "2019-01-03T22:11:17.000Z",
         "size": 2906
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2018-11-06T01:21:50.000Z",
-        "mtime": "2018-11-06T01:21:50.000Z",
-        "size": 4854
+        "ctime": "2019-05-24T18:34:21.000Z",
+        "mtime": "2019-05-24T18:34:21.000Z",
+        "size": 5777
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2018-11-06T01:11:53.000Z",
-        "mtime": "2018-11-06T01:11:53.000Z",
-        "size": 4961
+        "ctime": "2019-05-09T16:13:58.000Z",
+        "mtime": "2019-05-09T16:13:58.000Z",
+        "size": 4986
       },
       {
         "file": "inc/nosotros.view.php",
-        "ctime": "2018-11-22T00:16:57.000Z",
-        "mtime": "2018-11-22T00:16:57.000Z",
-        "size": 3600
+        "ctime": "2019-05-23T01:21:08.000Z",
+        "mtime": "2019-05-23T01:21:08.000Z",
+        "size": 3594
       },
       {
         "file": "inc/patrimonio.view.php",
-        "ctime": "2018-10-29T06:09:59.000Z",
-        "mtime": "2018-10-29T06:09:59.000Z",
+        "ctime": "2019-05-08T23:34:29.000Z",
+        "mtime": "2019-01-03T22:11:21.000Z",
         "size": 4279
       },
       {
         "file": "inc/salud.view.php",
-        "ctime": "2018-10-29T06:09:30.000Z",
-        "mtime": "2018-10-29T06:09:30.000Z",
+        "ctime": "2019-05-08T23:34:30.000Z",
+        "mtime": "2019-01-03T22:11:23.000Z",
         "size": 3640
       },
       {
         "file": "inc/vida.view.php",
-        "ctime": "2018-10-24T03:31:00.000Z",
-        "mtime": "2018-10-24T03:31:00.000Z",
+        "ctime": "2019-05-08T23:34:30.000Z",
+        "mtime": "2019-01-03T22:11:24.000Z",
         "size": 2732
       },
       {
         "file": "php/config.php",
-        "ctime": "2018-11-22T00:17:21.000Z",
-        "mtime": "2018-11-22T00:17:21.000Z",
-        "size": 212
+        "ctime": "2019-05-24T19:03:43.000Z",
+        "mtime": "2019-05-24T19:03:43.000Z",
+        "size": 194
       },
       {
         "file": ".htaccess",
@@ -363,177 +365,183 @@
       },
       {
         "file": "img/nosotros.png",
-        "ctime": "2018-10-22T16:53:22.000Z",
-        "mtime": "2018-10-22T16:53:21.000Z",
+        "ctime": "2019-05-08T23:34:18.000Z",
+        "mtime": "2019-01-03T22:10:30.000Z",
         "size": 59247
       },
       {
         "file": "img/nosotros-art1.jpg",
-        "ctime": "2018-10-22T22:45:19.000Z",
-        "mtime": "2018-10-22T22:45:19.000Z",
+        "ctime": "2019-05-08T23:34:18.000Z",
+        "mtime": "2019-01-03T22:10:27.000Z",
         "size": 160683
       },
       {
         "file": "img/galeria/1.jpg",
-        "ctime": "2018-10-23T04:28:54.000Z",
-        "mtime": "2018-10-23T04:28:54.000Z",
+        "ctime": "2019-05-08T23:34:58.000Z",
+        "mtime": "2019-01-03T22:11:05.000Z",
         "size": 26828
       },
       {
         "file": "img/galeria/2.jpg",
-        "ctime": "2018-10-23T04:29:03.000Z",
-        "mtime": "2018-10-23T04:29:03.000Z",
+        "ctime": "2019-05-08T23:34:59.000Z",
+        "mtime": "2019-01-03T22:11:07.000Z",
         "size": 28466
       },
       {
         "file": "img/galeria/3.jpg",
-        "ctime": "2018-10-23T04:29:10.000Z",
-        "mtime": "2018-10-23T04:29:10.000Z",
+        "ctime": "2019-05-08T23:34:59.000Z",
+        "mtime": "2019-01-03T22:11:09.000Z",
         "size": 24241
       },
       {
         "file": "img/galeria/4.jpg",
-        "ctime": "2018-10-23T04:29:17.000Z",
-        "mtime": "2018-10-23T04:29:17.000Z",
+        "ctime": "2019-05-08T23:35:00.000Z",
+        "mtime": "2019-01-03T22:11:11.000Z",
         "size": 32227
       },
       {
         "file": "img/galeria/5.jpg",
-        "ctime": "2018-10-23T04:29:23.000Z",
-        "mtime": "2018-10-23T04:29:23.000Z",
+        "ctime": "2019-05-08T23:35:01.000Z",
+        "mtime": "2019-01-03T22:11:13.000Z",
         "size": 38611
       },
       {
         "file": "img/galeria/6.jpg",
-        "ctime": "2018-10-23T04:29:27.000Z",
-        "mtime": "2018-10-23T04:29:27.000Z",
+        "ctime": "2019-05-08T23:35:02.000Z",
+        "mtime": "2019-01-03T22:11:14.000Z",
         "size": 23331
       },
       {
         "file": "img/sctr.png",
-        "ctime": "2018-10-23T20:16:06.000Z",
-        "mtime": "2018-10-23T20:16:05.000Z",
+        "ctime": "2019-05-08T23:34:21.000Z",
+        "mtime": "2019-01-03T22:10:43.000Z",
         "size": 10894
       },
       {
         "file": "img/seguro-accidentes.png",
-        "ctime": "2018-10-23T19:42:32.000Z",
-        "mtime": "2018-10-23T19:42:32.000Z",
+        "ctime": "2019-05-08T23:34:22.000Z",
+        "mtime": "2019-01-03T22:10:47.000Z",
         "size": 13837
       },
       {
         "file": "img/seguro-oncologico.png",
-        "ctime": "2018-10-23T20:12:36.000Z",
-        "mtime": "2018-10-23T20:12:36.000Z",
+        "ctime": "2019-05-08T23:34:23.000Z",
+        "mtime": "2019-01-03T22:10:49.000Z",
         "size": 5752
       },
       {
         "file": "img/seguro-salud.png",
-        "ctime": "2018-10-23T19:23:33.000Z",
-        "mtime": "2018-10-23T19:23:33.000Z",
+        "ctime": "2019-05-08T23:34:25.000Z",
+        "mtime": "2019-01-03T22:10:51.000Z",
         "size": 11646
       },
       {
         "file": "img/futuro-20.png",
-        "ctime": "2018-10-23T20:32:09.000Z",
-        "mtime": "2018-10-23T20:32:09.000Z",
+        "ctime": "2019-05-08T23:34:14.000Z",
+        "mtime": "2019-01-03T22:10:05.000Z",
         "size": 15817
       },
       {
         "file": "img/seguro-academico.png",
-        "ctime": "2018-10-23T20:33:57.000Z",
-        "mtime": "2018-10-23T20:33:57.000Z",
+        "ctime": "2019-05-08T23:34:22.000Z",
+        "mtime": "2019-01-03T22:10:44.000Z",
         "size": 34167
       },
       {
         "file": "img/responsabilidad-civil.png",
-        "ctime": "2018-10-23T21:13:03.000Z",
-        "mtime": "2018-10-23T21:13:03.000Z",
+        "ctime": "2019-05-08T23:34:20.000Z",
+        "mtime": "2019-01-03T22:10:38.000Z",
         "size": 16595
       },
       {
         "file": "img/seguro-robo.png",
-        "ctime": "2018-10-23T21:15:26.000Z",
-        "mtime": "2018-10-23T21:15:26.000Z",
+        "ctime": "2019-05-08T23:34:23.000Z",
+        "mtime": "2019-01-03T22:10:50.000Z",
         "size": 8771
       },
       {
         "file": "img/seguro-transporte.png",
-        "ctime": "2018-10-23T21:14:22.000Z",
-        "mtime": "2018-10-23T21:14:21.000Z",
+        "ctime": "2019-05-08T23:34:23.000Z",
+        "mtime": "2019-01-03T22:10:53.000Z",
         "size": 10950
       },
       {
         "file": "img/seguro-vehicular.png",
-        "ctime": "2018-10-23T21:11:51.000Z",
-        "mtime": "2018-10-23T21:11:50.000Z",
+        "ctime": "2019-05-08T23:34:25.000Z",
+        "mtime": "2019-01-03T22:10:55.000Z",
         "size": 74393
       },
       {
         "file": "img/aseguradoras.jpg",
-        "ctime": "2018-10-24T05:13:34.000Z",
-        "mtime": "2018-10-24T05:13:34.000Z",
+        "ctime": "2019-05-08T23:34:08.000Z",
+        "mtime": "2019-01-03T22:09:50.000Z",
         "size": 31932
       },
       {
         "file": "img/asesores.jpg",
-        "ctime": "2018-10-24T05:08:45.000Z",
-        "mtime": "2018-10-24T05:08:45.000Z",
+        "ctime": "2019-05-08T23:34:09.000Z",
+        "mtime": "2019-01-03T22:09:52.000Z",
         "size": 39848
       },
       {
         "file": "img/beneficios.jpg",
-        "ctime": "2018-10-24T05:47:22.000Z",
-        "mtime": "2018-10-24T05:47:22.000Z",
+        "ctime": "2019-05-08T23:34:10.000Z",
+        "mtime": "2019-01-03T22:09:54.000Z",
         "size": 34223
       },
       {
         "file": "img/capital.jpg",
-        "ctime": "2018-10-24T05:42:09.000Z",
-        "mtime": "2018-10-24T05:42:09.000Z",
+        "ctime": "2019-05-08T23:34:11.000Z",
+        "mtime": "2019-01-03T22:09:58.000Z",
         "size": 32249
       },
       {
         "file": "img/ceviche.jpg",
-        "ctime": "2018-10-24T05:48:52.000Z",
-        "mtime": "2018-10-24T05:48:52.000Z",
+        "ctime": "2019-05-08T23:34:12.000Z",
+        "mtime": "2019-01-03T22:10:00.000Z",
         "size": 45213
       },
       {
         "file": "img/personal.jpg",
-        "ctime": "2018-10-24T05:45:16.000Z",
-        "mtime": "2018-10-24T05:45:16.000Z",
+        "ctime": "2019-05-08T23:34:19.000Z",
+        "mtime": "2019-01-03T22:10:35.000Z",
         "size": 32132
       },
       {
         "file": "img/premio.jpg",
-        "ctime": "2018-10-24T05:50:10.000Z",
-        "mtime": "2018-10-24T05:50:10.000Z",
+        "ctime": "2019-05-08T23:34:19.000Z",
+        "mtime": "2019-01-03T22:10:37.000Z",
         "size": 48810
       },
       {
         "file": "img/vehicular.jpg",
-        "ctime": "2018-10-24T05:46:28.000Z",
-        "mtime": "2018-10-24T05:46:28.000Z",
+        "ctime": "2019-05-08T23:34:26.000Z",
+        "mtime": "2019-01-03T22:10:58.000Z",
         "size": 40974
       },
       {
-        "file": "img/hbposter.png",
-        "ctime": "2018-11-05T16:07:22.000Z",
-        "mtime": "2018-11-05T16:07:22.000Z",
-        "size": 122218
-      },
-      {
-        "file": "vid/happybd.mp4",
-        "ctime": "2018-11-06T01:02:10.000Z",
-        "mtime": "2018-11-05T19:49:35.000Z",
-        "size": 523211
-      },
-      {
         "file": "happybirthday.html",
-        "ctime": "2018-11-05T16:38:23.000Z",
-        "mtime": "2018-08-09T22:37:03.000Z",
+        "ctime": "2019-05-08T23:34:04.000Z",
+        "mtime": "2019-01-03T22:09:47.000Z",
         "size": 1113
+      },
+      {
+        "file": "img/happyd-poster.png",
+        "ctime": "2019-05-09T16:04:29.000Z",
+        "mtime": "2019-05-09T16:04:29.000Z",
+        "size": 188868
+      },
+      {
+        "file": "img/kallparadiotv-logo.png",
+        "ctime": "2019-05-24T16:03:44.000Z",
+        "mtime": "2019-05-24T16:03:43.000Z",
+        "size": 27571
+      },
+      {
+        "file": "img/img-modal.jpg",
+        "ctime": "2019-05-24T17:41:53.000Z",
+        "mtime": "2019-05-24T17:41:52.000Z",
+        "size": 67602
       }
     ]
   },
