Finalizacion de la web KCS

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -143,146 +143,140 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2019-05-24T19:03:00.000Z",
-        "mtime": "2019-05-24T19:03:00.000Z",
-        "size": 27208
+        "ctime": "2019-07-26T18:32:24.000Z",
+        "mtime": "2019-07-26T18:32:24.000Z",
+        "size": 27355
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2019-05-24T18:47:27.000Z",
-        "mtime": "2019-05-24T18:47:27.000Z",
+        "ctime": "2019-07-26T18:21:15.000Z",
+        "mtime": "2019-05-24T19:03:57.000Z",
         "size": 1696
       },
       {
         "file": "img/home-hero.png",
-        "ctime": "2019-05-08T23:34:14.000Z",
-        "mtime": "2019-01-03T22:10:11.000Z",
+        "ctime": "2019-07-26T18:20:47.000Z",
+        "mtime": "2019-05-23T12:25:24.000Z",
         "size": 87608
       },
       {
         "file": "img/kallpa-old-logo.png",
-        "ctime": "2019-05-08T23:34:15.000Z",
-        "mtime": "2019-01-03T22:10:16.000Z",
+        "ctime": "2019-07-26T18:20:50.000Z",
+        "mtime": "2019-05-23T12:25:29.000Z",
         "size": 203996
       },
       {
         "file": "img/kcs-logo.png",
-        "ctime": "2019-05-08T23:34:16.000Z",
-        "mtime": "2019-01-03T22:10:19.000Z",
+        "ctime": "2019-07-26T18:20:51.000Z",
+        "mtime": "2019-05-23T12:25:32.000Z",
         "size": 76004
       },
       {
         "file": "css/fonts.css",
-        "ctime": "2019-05-08T23:34:03.000Z",
-        "mtime": "2019-01-03T22:09:28.000Z",
+        "ctime": "2019-07-26T18:20:34.000Z",
+        "mtime": "2019-05-23T12:24:45.000Z",
         "size": 439
       },
       {
         "file": "css/normalize.css",
-        "ctime": "2019-05-08T23:34:03.000Z",
-        "mtime": "2019-01-03T22:09:30.000Z",
+        "ctime": "2019-07-26T18:20:34.000Z",
+        "mtime": "2019-05-23T12:24:46.000Z",
         "size": 7718
       },
       {
         "file": "fonts/QuattrocentoSans-Bold.ttf",
-        "ctime": "2019-05-08T23:34:06.000Z",
-        "mtime": "2019-01-03T22:09:36.000Z",
+        "ctime": "2019-07-26T18:20:37.000Z",
+        "mtime": "2019-05-23T12:24:51.000Z",
         "size": 100560
       },
       {
         "file": "fonts/QuattrocentoSans-BoldItalic.ttf",
-        "ctime": "2019-05-08T23:34:06.000Z",
-        "mtime": "2019-01-03T22:09:39.000Z",
+        "ctime": "2019-07-26T18:20:37.000Z",
+        "mtime": "2019-05-23T12:24:54.000Z",
         "size": 100748
       },
       {
         "file": "fonts/QuattrocentoSans-Italic.ttf",
-        "ctime": "2019-05-08T23:34:07.000Z",
-        "mtime": "2019-01-03T22:09:43.000Z",
+        "ctime": "2019-07-26T18:20:38.000Z",
+        "mtime": "2019-05-23T12:24:57.000Z",
         "size": 108700
       },
       {
         "file": "fonts/QuattrocentoSans-Regular.ttf",
-        "ctime": "2019-05-08T23:34:07.000Z",
-        "mtime": "2019-01-03T22:09:46.000Z",
+        "ctime": "2019-07-26T18:20:38.000Z",
+        "mtime": "2019-05-23T12:25:01.000Z",
         "size": 98340
       },
       {
         "file": "img/selected.png",
-        "ctime": "2019-05-08T23:34:25.000Z",
-        "mtime": "2019-01-03T22:10:56.000Z",
+        "ctime": "2019-07-26T18:21:05.000Z",
+        "mtime": "2019-05-23T12:26:30.000Z",
         "size": 181
       },
       {
         "file": "img/beneficios.png",
-        "ctime": "2019-05-08T23:34:12.000Z",
-        "mtime": "2019-01-03T22:09:56.000Z",
+        "ctime": "2019-07-26T18:20:42.000Z",
+        "mtime": "2019-05-23T12:25:09.000Z",
         "size": 48774
       },
       {
         "file": "img/laboral.png",
-        "ctime": "2019-05-08T23:34:16.000Z",
-        "mtime": "2019-01-03T22:10:20.000Z",
+        "ctime": "2019-07-26T18:20:52.000Z",
+        "mtime": "2019-05-23T12:25:34.000Z",
         "size": 23873
       },
       {
         "file": "img/patrimonio.png",
-        "ctime": "2019-05-08T23:34:19.000Z",
-        "mtime": "2019-01-03T22:10:33.000Z",
+        "ctime": "2019-07-26T18:20:56.000Z",
+        "mtime": "2019-05-23T12:25:55.000Z",
         "size": 38072
       },
       {
         "file": "img/salud.png",
-        "ctime": "2019-05-08T23:34:21.000Z",
-        "mtime": "2019-01-03T22:10:41.000Z",
+        "ctime": "2019-07-26T18:21:00.000Z",
+        "mtime": "2019-05-23T12:26:10.000Z",
         "size": 25146
       },
       {
         "file": "img/vida.png",
-        "ctime": "2019-05-08T23:34:27.000Z",
-        "mtime": "2019-01-03T22:11:00.000Z",
+        "ctime": "2019-07-26T18:21:07.000Z",
+        "mtime": "2019-05-23T12:26:34.000Z",
         "size": 36275
       },
       {
-        "file": "img/video-bienvenida.jpg",
-        "ctime": "2019-05-08T23:34:27.000Z",
-        "mtime": "2019-01-03T22:11:02.000Z",
-        "size": 42634
-      },
-      {
         "file": "img/video-info.jpg",
-        "ctime": "2019-05-08T23:34:27.000Z",
-        "mtime": "2019-01-03T22:11:04.000Z",
+        "ctime": "2019-07-26T18:21:08.000Z",
+        "mtime": "2019-05-23T12:26:37.000Z",
         "size": 34018
       },
       {
         "file": "img/chubb.jpg",
-        "ctime": "2019-05-08T23:34:13.000Z",
-        "mtime": "2019-01-03T22:10:02.000Z",
+        "ctime": "2019-07-26T18:20:44.000Z",
+        "mtime": "2019-05-23T12:25:14.000Z",
         "size": 4962
       },
       {
         "file": "img/la_positiva.jpg",
-        "ctime": "2019-05-08T23:34:16.000Z",
-        "mtime": "2019-01-03T22:10:22.000Z",
+        "ctime": "2019-07-26T18:20:51.000Z",
+        "mtime": "2019-05-23T12:25:35.000Z",
         "size": 10126
       },
       {
         "file": "img/mapfre.jpg",
-        "ctime": "2019-05-08T23:34:16.000Z",
-        "mtime": "2019-01-03T22:10:23.000Z",
+        "ctime": "2019-07-26T18:20:52.000Z",
+        "mtime": "2019-05-23T12:25:36.000Z",
         "size": 12421
       },
       {
         "file": "img/pacifico.jpg",
-        "ctime": "2019-05-08T23:34:18.000Z",
-        "mtime": "2019-01-03T22:10:31.000Z",
+        "ctime": "2019-07-26T18:20:56.000Z",
+        "mtime": "2019-05-23T12:25:53.000Z",
         "size": 9512
       },
       {
         "file": "img/rimac.jpg",
-        "ctime": "2019-05-08T23:34:21.000Z",
-        "mtime": "2019-01-03T22:10:40.000Z",
+        "ctime": "2019-07-26T18:21:00.000Z",
+        "mtime": "2019-05-23T12:26:05.000Z",
         "size": 9315
       },
       {
@@ -293,68 +287,68 @@
       },
       {
         "file": "index.php",
-        "ctime": "2019-05-24T16:18:10.000Z",
-        "mtime": "2019-05-24T16:18:10.000Z",
+        "ctime": "2019-07-26T18:41:36.000Z",
+        "mtime": "2019-07-26T18:41:36.000Z",
         "size": 1389
       },
       {
         "file": "img/contacto.png",
-        "ctime": "2019-05-08T23:34:13.000Z",
-        "mtime": "2019-01-03T22:10:03.000Z",
+        "ctime": "2019-07-26T18:20:44.000Z",
+        "mtime": "2019-05-23T12:25:15.000Z",
         "size": 20531
       },
       {
         "file": "inc/beneficios.view.php",
-        "ctime": "2019-05-08T23:34:28.000Z",
-        "mtime": "2019-01-03T22:11:16.000Z",
+        "ctime": "2019-07-26T18:21:10.000Z",
+        "mtime": "2019-05-23T12:26:49.000Z",
         "size": 4399
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2019-05-08T23:34:28.000Z",
-        "mtime": "2019-01-03T22:11:17.000Z",
+        "ctime": "2019-07-26T18:21:10.000Z",
+        "mtime": "2019-05-23T12:26:50.000Z",
         "size": 2906
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2019-05-24T18:34:21.000Z",
-        "mtime": "2019-05-24T18:34:21.000Z",
-        "size": 5777
+        "ctime": "2019-07-26T18:21:11.000Z",
+        "mtime": "2019-07-16T16:51:31.000Z",
+        "size": 5696
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2019-05-09T16:13:58.000Z",
-        "mtime": "2019-05-09T16:13:58.000Z",
+        "ctime": "2019-07-26T18:39:51.000Z",
+        "mtime": "2019-07-26T18:39:51.000Z",
         "size": 4986
       },
       {
         "file": "inc/nosotros.view.php",
-        "ctime": "2019-05-23T01:21:08.000Z",
-        "mtime": "2019-05-23T01:21:08.000Z",
+        "ctime": "2019-07-26T18:21:12.000Z",
+        "mtime": "2019-05-23T12:26:53.000Z",
         "size": 3594
       },
       {
         "file": "inc/patrimonio.view.php",
-        "ctime": "2019-05-08T23:34:29.000Z",
-        "mtime": "2019-01-03T22:11:21.000Z",
+        "ctime": "2019-07-26T18:21:13.000Z",
+        "mtime": "2019-05-23T12:26:54.000Z",
         "size": 4279
       },
       {
         "file": "inc/salud.view.php",
-        "ctime": "2019-05-08T23:34:30.000Z",
-        "mtime": "2019-01-03T22:11:23.000Z",
+        "ctime": "2019-07-26T18:21:13.000Z",
+        "mtime": "2019-05-23T12:26:56.000Z",
         "size": 3640
       },
       {
         "file": "inc/vida.view.php",
-        "ctime": "2019-05-08T23:34:30.000Z",
-        "mtime": "2019-01-03T22:11:24.000Z",
+        "ctime": "2019-07-26T18:21:15.000Z",
+        "mtime": "2019-05-23T12:26:57.000Z",
         "size": 2732
       },
       {
         "file": "php/config.php",
-        "ctime": "2019-05-24T19:03:43.000Z",
-        "mtime": "2019-05-24T19:03:43.000Z",
+        "ctime": "2019-07-26T18:41:36.000Z",
+        "mtime": "2019-07-26T18:41:36.000Z",
         "size": 194
       },
       {
@@ -365,183 +359,189 @@
       },
       {
         "file": "img/nosotros.png",
-        "ctime": "2019-05-08T23:34:18.000Z",
-        "mtime": "2019-01-03T22:10:30.000Z",
+        "ctime": "2019-07-26T18:20:54.000Z",
+        "mtime": "2019-05-23T12:25:51.000Z",
         "size": 59247
       },
       {
         "file": "img/nosotros-art1.jpg",
-        "ctime": "2019-05-08T23:34:18.000Z",
-        "mtime": "2019-01-03T22:10:27.000Z",
+        "ctime": "2019-07-26T18:20:55.000Z",
+        "mtime": "2019-05-23T12:25:49.000Z",
         "size": 160683
       },
       {
         "file": "img/galeria/1.jpg",
-        "ctime": "2019-05-08T23:34:58.000Z",
-        "mtime": "2019-01-03T22:11:05.000Z",
+        "ctime": "2019-07-26T18:22:12.000Z",
+        "mtime": "2019-05-23T12:26:39.000Z",
         "size": 26828
       },
       {
         "file": "img/galeria/2.jpg",
-        "ctime": "2019-05-08T23:34:59.000Z",
-        "mtime": "2019-01-03T22:11:07.000Z",
+        "ctime": "2019-07-26T18:22:13.000Z",
+        "mtime": "2019-05-23T12:26:41.000Z",
         "size": 28466
       },
       {
         "file": "img/galeria/3.jpg",
-        "ctime": "2019-05-08T23:34:59.000Z",
-        "mtime": "2019-01-03T22:11:09.000Z",
+        "ctime": "2019-07-26T18:22:14.000Z",
+        "mtime": "2019-05-23T12:26:42.000Z",
         "size": 24241
       },
       {
         "file": "img/galeria/4.jpg",
-        "ctime": "2019-05-08T23:35:00.000Z",
-        "mtime": "2019-01-03T22:11:11.000Z",
+        "ctime": "2019-07-26T18:22:17.000Z",
+        "mtime": "2019-05-23T12:26:44.000Z",
         "size": 32227
       },
       {
         "file": "img/galeria/5.jpg",
-        "ctime": "2019-05-08T23:35:01.000Z",
-        "mtime": "2019-01-03T22:11:13.000Z",
+        "ctime": "2019-07-26T18:22:19.000Z",
+        "mtime": "2019-05-23T12:26:46.000Z",
         "size": 38611
       },
       {
         "file": "img/galeria/6.jpg",
-        "ctime": "2019-05-08T23:35:02.000Z",
-        "mtime": "2019-01-03T22:11:14.000Z",
+        "ctime": "2019-07-26T18:22:20.000Z",
+        "mtime": "2019-05-23T12:26:48.000Z",
         "size": 23331
       },
       {
         "file": "img/sctr.png",
-        "ctime": "2019-05-08T23:34:21.000Z",
-        "mtime": "2019-01-03T22:10:43.000Z",
+        "ctime": "2019-07-26T18:21:01.000Z",
+        "mtime": "2019-05-23T12:26:12.000Z",
         "size": 10894
       },
       {
         "file": "img/seguro-accidentes.png",
-        "ctime": "2019-05-08T23:34:22.000Z",
-        "mtime": "2019-01-03T22:10:47.000Z",
+        "ctime": "2019-07-26T18:21:02.000Z",
+        "mtime": "2019-05-23T12:26:16.000Z",
         "size": 13837
       },
       {
         "file": "img/seguro-oncologico.png",
-        "ctime": "2019-05-08T23:34:23.000Z",
-        "mtime": "2019-01-03T22:10:49.000Z",
+        "ctime": "2019-07-26T18:21:02.000Z",
+        "mtime": "2019-05-23T12:26:19.000Z",
         "size": 5752
       },
       {
         "file": "img/seguro-salud.png",
-        "ctime": "2019-05-08T23:34:25.000Z",
-        "mtime": "2019-01-03T22:10:51.000Z",
+        "ctime": "2019-07-26T18:21:03.000Z",
+        "mtime": "2019-05-23T12:26:23.000Z",
         "size": 11646
       },
       {
         "file": "img/futuro-20.png",
-        "ctime": "2019-05-08T23:34:14.000Z",
-        "mtime": "2019-01-03T22:10:05.000Z",
+        "ctime": "2019-07-26T18:20:45.000Z",
+        "mtime": "2019-05-23T12:25:17.000Z",
         "size": 15817
       },
       {
         "file": "img/seguro-academico.png",
-        "ctime": "2019-05-08T23:34:22.000Z",
-        "mtime": "2019-01-03T22:10:44.000Z",
+        "ctime": "2019-07-26T18:21:02.000Z",
+        "mtime": "2019-05-23T12:26:14.000Z",
         "size": 34167
       },
       {
         "file": "img/responsabilidad-civil.png",
-        "ctime": "2019-05-08T23:34:20.000Z",
-        "mtime": "2019-01-03T22:10:38.000Z",
+        "ctime": "2019-07-26T18:20:58.000Z",
+        "mtime": "2019-05-23T12:26:03.000Z",
         "size": 16595
       },
       {
         "file": "img/seguro-robo.png",
-        "ctime": "2019-05-08T23:34:23.000Z",
-        "mtime": "2019-01-03T22:10:50.000Z",
+        "ctime": "2019-07-26T18:21:02.000Z",
+        "mtime": "2019-05-23T12:26:21.000Z",
         "size": 8771
       },
       {
         "file": "img/seguro-transporte.png",
-        "ctime": "2019-05-08T23:34:23.000Z",
-        "mtime": "2019-01-03T22:10:53.000Z",
+        "ctime": "2019-07-26T18:21:03.000Z",
+        "mtime": "2019-05-23T12:26:24.000Z",
         "size": 10950
       },
       {
         "file": "img/seguro-vehicular.png",
-        "ctime": "2019-05-08T23:34:25.000Z",
-        "mtime": "2019-01-03T22:10:55.000Z",
+        "ctime": "2019-07-26T18:21:04.000Z",
+        "mtime": "2019-05-23T12:26:29.000Z",
         "size": 74393
       },
       {
         "file": "img/aseguradoras.jpg",
-        "ctime": "2019-05-08T23:34:08.000Z",
-        "mtime": "2019-01-03T22:09:50.000Z",
+        "ctime": "2019-07-26T18:20:39.000Z",
+        "mtime": "2019-05-23T12:25:04.000Z",
         "size": 31932
       },
       {
         "file": "img/asesores.jpg",
-        "ctime": "2019-05-08T23:34:09.000Z",
-        "mtime": "2019-01-03T22:09:52.000Z",
+        "ctime": "2019-07-26T18:20:40.000Z",
+        "mtime": "2019-05-23T12:25:06.000Z",
         "size": 39848
       },
       {
         "file": "img/beneficios.jpg",
-        "ctime": "2019-05-08T23:34:10.000Z",
-        "mtime": "2019-01-03T22:09:54.000Z",
+        "ctime": "2019-07-26T18:20:41.000Z",
+        "mtime": "2019-05-23T12:25:07.000Z",
         "size": 34223
       },
       {
         "file": "img/capital.jpg",
-        "ctime": "2019-05-08T23:34:11.000Z",
-        "mtime": "2019-01-03T22:09:58.000Z",
+        "ctime": "2019-07-26T18:20:43.000Z",
+        "mtime": "2019-05-23T12:25:11.000Z",
         "size": 32249
       },
       {
         "file": "img/ceviche.jpg",
-        "ctime": "2019-05-08T23:34:12.000Z",
-        "mtime": "2019-01-03T22:10:00.000Z",
+        "ctime": "2019-07-26T18:20:43.000Z",
+        "mtime": "2019-05-23T12:25:13.000Z",
         "size": 45213
       },
       {
         "file": "img/personal.jpg",
-        "ctime": "2019-05-08T23:34:19.000Z",
-        "mtime": "2019-01-03T22:10:35.000Z",
+        "ctime": "2019-07-26T18:20:57.000Z",
+        "mtime": "2019-05-23T12:25:57.000Z",
         "size": 32132
       },
       {
         "file": "img/premio.jpg",
-        "ctime": "2019-05-08T23:34:19.000Z",
-        "mtime": "2019-01-03T22:10:37.000Z",
+        "ctime": "2019-07-26T18:20:57.000Z",
+        "mtime": "2019-05-23T12:26:00.000Z",
         "size": 48810
       },
       {
         "file": "img/vehicular.jpg",
-        "ctime": "2019-05-08T23:34:26.000Z",
-        "mtime": "2019-01-03T22:10:58.000Z",
+        "ctime": "2019-07-26T18:21:06.000Z",
+        "mtime": "2019-05-23T12:26:32.000Z",
         "size": 40974
       },
       {
         "file": "happybirthday.html",
-        "ctime": "2019-05-08T23:34:04.000Z",
-        "mtime": "2019-01-03T22:09:47.000Z",
+        "ctime": "2019-07-26T18:20:35.000Z",
+        "mtime": "2019-05-23T12:25:02.000Z",
         "size": 1113
       },
       {
         "file": "img/happyd-poster.png",
-        "ctime": "2019-05-09T16:04:29.000Z",
-        "mtime": "2019-05-09T16:04:29.000Z",
+        "ctime": "2019-07-26T18:20:46.000Z",
+        "mtime": "2019-05-23T12:25:21.000Z",
         "size": 188868
       },
       {
         "file": "img/kallparadiotv-logo.png",
-        "ctime": "2019-05-24T16:03:44.000Z",
-        "mtime": "2019-05-24T16:03:43.000Z",
+        "ctime": "2019-07-26T18:20:49.000Z",
+        "mtime": "2019-05-24T16:03:52.000Z",
         "size": 27571
       },
       {
         "file": "img/img-modal.jpg",
-        "ctime": "2019-05-24T17:41:53.000Z",
-        "mtime": "2019-05-24T17:41:52.000Z",
-        "size": 67602
+        "ctime": "2019-07-26T18:20:48.000Z",
+        "mtime": "2019-07-16T16:44:14.000Z",
+        "size": 70262
+      },
+      {
+        "file": "img/video-bienvenida.png",
+        "ctime": "2019-07-26T18:39:20.000Z",
+        "mtime": "2019-07-26T18:39:20.000Z",
+        "size": 22050
       }
     ]
   },
