Inicio de aplicaion de SEO

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -92,7 +92,7 @@
     "connectionType": "ftp",
     "remotePath": "/public_html/",
     "uploadTimeout": 20000,
-    "uploadOnChange": false,
+    "uploadOnChange": true,
     "ftp": {
       "secure": false,
       "keepAlive": true,
@@ -143,9 +143,9 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2019-08-31T05:46:28.000Z",
-        "mtime": "2019-08-31T05:46:28.000Z",
-        "size": 27637
+        "ctime": "2019-09-05T11:51:47.000Z",
+        "mtime": "2019-09-05T11:51:47.000Z",
+        "size": 28500
       },
       {
         "file": "js/scripts.js",
@@ -287,9 +287,9 @@
       },
       {
         "file": "index.php",
-        "ctime": "2019-09-04T17:17:35.000Z",
-        "mtime": "2019-09-04T17:17:35.000Z",
-        "size": 1388
+        "ctime": "2019-09-04T23:45:47.000Z",
+        "mtime": "2019-09-04T23:45:47.000Z",
+        "size": 1529
       },
       {
         "file": "img/contacto.png",
@@ -305,21 +305,21 @@
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2019-07-26T18:21:10.000Z",
-        "mtime": "2019-05-23T12:26:50.000Z",
-        "size": 2906
+        "ctime": "2019-09-05T04:56:39.000Z",
+        "mtime": "2019-09-05T04:56:39.000Z",
+        "size": 5873
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2019-09-04T17:18:42.000Z",
-        "mtime": "2019-09-04T17:18:42.000Z",
-        "size": 5777
+        "ctime": "2019-09-05T00:37:20.000Z",
+        "mtime": "2019-09-05T00:37:20.000Z",
+        "size": 5271
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2019-07-26T18:39:51.000Z",
-        "mtime": "2019-07-26T18:39:51.000Z",
-        "size": 4986
+        "ctime": "2019-09-05T11:50:32.000Z",
+        "mtime": "2019-09-05T11:50:32.000Z",
+        "size": 4995
       },
       {
         "file": "inc/nosotros.view.php",
@@ -542,6 +542,24 @@
         "ctime": "2019-07-26T18:39:20.000Z",
         "mtime": "2019-07-26T18:39:20.000Z",
         "size": 22050
+      },
+      {
+        "file": "inc/_modal.php",
+        "ctime": "2019-09-05T00:34:05.000Z",
+        "mtime": "2019-09-05T00:34:05.000Z",
+        "size": 581
+      },
+      {
+        "file": "robots.txt",
+        "ctime": "2019-09-05T00:51:34.000Z",
+        "mtime": "2019-09-05T00:51:34.000Z",
+        "size": 63
+      },
+      {
+        "file": "sitemap.xml",
+        "ctime": "2019-09-05T00:52:20.000Z",
+        "mtime": "2019-09-05T00:52:20.000Z",
+        "size": 1564
       }
     ]
   },
